# metacheck

./: .gitignore  README.md  check.py  model.py  pyproject.toml
assets/report/: index.html
metacheck/: check.py  model.py
