[tool.poetry]
name = "metacheck"
version = "0.1.0"
description = "Metadata checker for your website."
authors = ["Thomas Bille <thomas@bille.dev>"]
readme = "README.md"
packages = [
    { include = "metacheck" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
sqlalchemy = "^1.4.46"
click = "^8.1.3"

[tool.poetry.scripts]
metacheck = 'metacheck.check:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
